# redland

./: .gitignore  CMakeLists.txt  libraptor2.a.nmoutput.txt  librasqal.a.nmoutput.txt  librdf.a.nmoutput.txt  libxml2.a.nmoutput.txt
curl-7.69.1/install/lib/: libcurl-d_imp.lib
libiconv_x64-windows/: CONTROL
libiconv_x64-windows/share/libiconv/: vcpkg_abi_info.txt
libxml2-2.9.10/: xpath.c
libxml2-2.9.10/autom4te.cache/: output.1  requests  traces.0  traces.1
libxml2-2.9.10/install.ubuntu/lib/: libxml2.la  xml2Conf.sh
libxml2-2.9.10/install.windows/lib/: libxml2.lib
libxml2-2.9.10/tmp/: libxml2-cfgcmd.txt
libxml2-2.9.10/win32/: Makefile.msvc  config.msvc  configure.js
libxml2-2.9.10/win32/bin.msvc/: libxml2.exp
libxml2-2.9.10/win32/int.msvc/: libxml2.def
libxml2-2.9.10/win32/tmp/: libxml2-cfgcmd.txt
raptor2-2.0.15/: CMakeLists.txt  Dockerfile  Makefile  config.status  raptor2.pc
raptor2-2.0.15/autom4te.cache/: output.1  requests  traces.0  traces.1
raptor2-2.0.15/data/: Makefile
raptor2-2.0.15/docs/: Makefile
raptor2-2.0.15/examples/: Makefile
raptor2-2.0.15/install-windows/lib/: raptor2.lib
raptor2-2.0.15/librdfa/: Makefile  librdfa.la
raptor2-2.0.15/librdfa/.deps/: context.Plo  curie.Plo  iri.Plo  language.Plo  lists.Plo  namespace.Plo  rdfa.Plo  rdfa_utils.Plo  subject.Plo  triple.Plo
raptor2-2.0.15/scripts/: Makefile
raptor2-2.0.15/scripts/.deps/: build-formats.Po
raptor2-2.0.15/scripts/.libs/: build-formats
raptor2-2.0.15/src/: CMakeLists.txt  Makefile  parsedate.c  raptor_config.h  raptor_config_windows.h  turtle_lexer.h
raptor2-2.0.15/src/.deps/: ntriples_parse.Plo  parsedate.Plo  raptor_abbrev.Plo  raptor_avltree.Plo  raptor_concepts.Plo  raptor_escaped.Plo  raptor_general.Plo  raptor_guess.Plo  raptor_iostream.Plo  raptor_json_writer.Plo  raptor_librdfa.Plo  raptor_libxml.Plo  raptor_locator.Plo  raptor_log.Plo  raptor_memstr.Plo  raptor_namespace.Plo  raptor_ntriples.Plo  raptor_option.Plo  raptor_parse.Plo  raptor_qname.Plo  raptor_rdfxml.Plo  raptor_rfc2396.Plo  raptor_rss.Plo  raptor_rss_common.Plo  raptor_sax2.Plo  raptor_sequence.Plo  raptor_serialize.Plo  raptor_serialize_dot.Plo  raptor_serialize_html.Plo  raptor_serialize_json.Plo  raptor_serialize_ntriples.Plo  raptor_serialize_rdfxml.Plo  raptor_serialize_rdfxmla.Plo  raptor_serialize_rss.Plo  raptor_serialize_turtle.Plo  raptor_set.Plo  raptor_statement.Plo  raptor_stringbuffer.Plo  raptor_syntax_description.Plo  raptor_term.Plo  (+12 more)
raptor2-2.0.15/src/.libs/: libraptor2.la  libraptor2.lai
raptor2-2.0.15/tests/: Makefile
raptor2-2.0.15/tests/feeds/: Makefile
raptor2-2.0.15/tests/grddl/: Makefile
raptor2-2.0.15/tests/json/: Makefile
raptor2-2.0.15/tests/nquads-2013/: Makefile
raptor2-2.0.15/tests/ntriples/: Makefile
raptor2-2.0.15/tests/ntriples-2013/: Makefile
raptor2-2.0.15/tests/rdfa/: Makefile
raptor2-2.0.15/tests/rdfa11/: Makefile
raptor2-2.0.15/tests/rdfxml/: Makefile
raptor2-2.0.15/tests/trig/: Makefile
raptor2-2.0.15/tests/turtle-2013/: Makefile
raptor2-2.0.15/utils/: Makefile
rasqal-0.9.33/: Makefile  Makefile.in  aclocal.m4  config.status  rasqal-src-config  rasqal.pc
rasqal-0.9.33/autom4te.cache/: output.1  requests  traces.0  traces.1
rasqal-0.9.33/data/: Makefile  Makefile.in
rasqal-0.9.33/docs/: Makefile  Makefile.in  rasqal-decl-list.txt  rasqal-decl.txt  rasqal-fake.h  rasqal-undeclared.txt  rasqal-undocumented.txt  rasqal-unused.txt
rasqal-0.9.33/getopt/: Makefile  Makefile.in
rasqal-0.9.33/libmtwist/: Makefile  Makefile.in  mt.lo  seed.lo
rasqal-0.9.33/libsv/: Makefile  Makefile.in  sv.lo
rasqal-0.9.33/scripts/: Makefile  Makefile.in
rasqal-0.9.33/src/: CMakeLists.txt  Makefile  Makefile.in  rasqal.h  rasqal_algebra.lo  rasqal_bindings.lo  rasqal_config.h  rasqal_config_linux.h  rasqal_config_windows.h  rasqal_data_graph.lo  rasqal_dataset.lo  rasqal_datetime.lo  rasqal_decimal.lo  rasqal_digest.lo  rasqal_digest_md5.lo  rasqal_digest_sha1.lo  rasqal_double.lo  rasqal_engine.lo  rasqal_engine_algebra.lo  rasqal_engine_sort.lo  rasqal_expr.lo  rasqal_expr_datetimes.lo  rasqal_expr_evaluate.lo  rasqal_expr_numerics.lo  rasqal_expr_strings.lo  rasqal_feature.lo  rasqal_format_html.lo  rasqal_format_json.lo  rasqal_format_rdf.lo  rasqal_format_sparql_xml.lo  rasqal_format_sv.lo  rasqal_format_table.lo  rasqal_formula.lo  rasqal_general.lo  rasqal_graph_pattern.lo  rasqal_iostream.lo  rasqal_literal.lo  rasqal_map.lo  rasqal_ntriples.lo  rasqal_prefix.lo  (+40 more)
rasqal-0.9.33/tests/: Makefile  Makefile.in
rasqal-0.9.33/utils/: Makefile  Makefile.in  check-query  librasqalcmdline.la  read_files.lo  results.lo  roqet  to-ntriples
rasqal-0.9.33/win32/: Makefile  Makefile.in
redland-1.0.17/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  redland-src-config  redland.pc
redland-1.0.17/autom4te.cache/: output.1  requests  traces.0  traces.1
redland-1.0.17/data/: Makefile  Makefile.in
redland-1.0.17/demos/: Makefile  Makefile.in
redland-1.0.17/docs/: Makefile  Makefile.in  redland-undocumented.txt  redland-unused.txt
redland-1.0.17/examples/: Makefile  Makefile.in
redland-1.0.17/libltdl/: Makefile  Makefile.in  aclocal.m4  config.status  libltdlc.la
redland-1.0.17/scripts/: Makefile  Makefile.in
redland-1.0.17/src/: CMakeLists.txt  Makefile  Makefile.in  librdf.la  rdf_concepts.lo  rdf_config.h  rdf_digest.lo  rdf_digest_md5.lo  rdf_digest_sha1.lo  rdf_files.lo  rdf_hash.lo  rdf_hash_bdb.lo  rdf_hash_cursor.lo  rdf_hash_memory.lo  rdf_heuristics.lo  rdf_init.lo  rdf_iterator.lo  rdf_list.lo  rdf_log.lo  rdf_model.lo  rdf_model_storage.lo  rdf_node.lo  rdf_node_common.lo  rdf_parser.lo  rdf_parser_raptor.lo  rdf_query.lo  rdf_query_rasqal.lo  rdf_query_results.lo  rdf_raptor.lo  rdf_serializer.lo  rdf_serializer_raptor.lo  rdf_statement.lo  rdf_statement_common.lo  rdf_storage.lo  rdf_storage_file.lo  rdf_storage_hashes.lo  rdf_storage_list.lo  rdf_storage_sql.lo  rdf_storage_trees.lo  rdf_stream.lo  (+2 more)
redland-1.0.17/utils/: Makefile  Makefile.in  rdfproc  redland-db-upgrade
(+271 files in other folders)
